Fixed applet top menu white space

--- a/DRP-nodejs/webroot/assets/drp/css/vdm.css
+++ b/DRP-nodejs/webroot/assets/drp/css/vdm.css
@@ -330,13 +330,12 @@ textarea {
         top: 18px;
         overflow: visible;
         width: 100%;
+        background-image: -webkit-linear-gradient(top,#f5f5f5,#cfd1cf);
     }
 
         .vdmWindow .vdmWindowMenu ul {
-            background-color: #cfd1cf;
             border: 1px solid #b6b6b6;
-            box-shadow: 0 1px 0 #fff inset;
-            background-image: -webkit-linear-gradient(top,#f5f5f5,#cfd1cf);
+            /* box-shadow: 0 1px 0 #fff inset; */
             height: 20px;
             list-style: none outside none;
             margin: 0;
@@ -486,7 +485,7 @@ textarea {
         overflow: hidden;
         background: #fff;
         width: 100%;
-        top: 38px;
+        top: 40px;
         bottom: 16px;
         color: #222;
         z-index: 2;
@@ -535,17 +534,13 @@ textarea {
             display: block;
         }
 
-    .vdmWindow .vdmWindowData .dwData.parent {
-        border: none;
-    }
-
     .vdmWindow .vdmWindowData .dwData-LeftPane {
         position: absolute;
         top: 0;
         left: 0;
         width: 110px;
         height: 100%;
-        border: 1px solid #BBB;
+        border-right: 1px solid #BBB;
         overflow-y: auto;
         -webkit-user-select: none;
         -khtml-user-select: none;
@@ -588,7 +583,7 @@ textarea {
         left: 114px;
         right: 0;
         height: 100%;
-        border: 1px solid #BBB;
+        border-left: 1px solid #BBB;
     }
 
     .vdmWindow .vdmWindowData .dwData-TopPane {
@@ -597,7 +592,7 @@ textarea {
         left: 0;
         width: 100%;
         height: 110px;
-        border: 1px solid #BBB;
+        border-bottom: 1px solid #BBB;
         overflow-y: auto;
         -webkit-user-select: none;
         -moz-user-select: none;
@@ -620,7 +615,7 @@ textarea {
         left: 0;
         bottom: 0;
         width: 100%;
-        border: 1px solid #BBB;
+        border-top: 1px solid #BBB;
     }
 
     .vdmWindow .vdmWindowFooter {
